--- a/.github/workflows/myrun.yml
+++ b/.github/workflows/myrun.yml
@@ -7,6 +7,16 @@ on:
   schedule:
         # Runs everyday at 1:00 AM
         - cron: "0 1 * * *"
+  workflow_dispatch:
+    inputs:
+      ip:
+        description: 'lan ip address'
+        required: true
+        default: '192.168.1.1'
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 
 permissions:
   contents: write
